// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Metadata/Combined Combined 1 1`] = `
<storybook-wrapper>
  <storybook-simple-token-component
    ng-reflect-name="Prop Name"
  >
    <h3>
      Prop Name
    </h3>
    <p>
      Items:
    </p>
    <ul>
      
      <li>
        Joe
      </li>
      <li>
        Jane
      </li>
    </ul>
  </storybook-simple-token-component>
</storybook-wrapper>
`;

exports[`Storyshots Metadata/Combined Combined 2 1`] = `
<storybook-wrapper>
  <storybook-simple-token-component
    ng-reflect-name="CustomPipe: Prop Name"
  >
    <h3>
      CustomPipe: Prop Name
    </h3>
    <p>
      Items:
    </p>
    <ul>
      
      <li>
        Joe
      </li>
      <li>
        Jane
      </li>
    </ul>
  </storybook-simple-token-component>
</storybook-wrapper>
`;
